--- a/index_en.html
+++ b/index_en.html
@@ -1,1 +1,13 @@
-<!-- index_en.html 英文版請上傳替換 -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>LIAN YA CHENG LTD. - English</title>
+</head>
+<body>
+  <h1>LIAN YA CHENG LTD.</h1>
+  <p>We specialize in brand localization, multi-channel distribution, logistics and marketing support in Taiwan.</p>
+  <p>Please return to <a href="index.html">Traditional Chinese version</a>.</p>
+</body>
+</html>
