--- a/index_jp.html
+++ b/index_jp.html
@@ -1,1 +1,13 @@
-<!-- index_jp.html 日文版請上傳替換 -->
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>LIAN YA CHENG LTD. - 日本語</title>
+</head>
+<body>
+  <h1>LIAN YA CHENG LTD.</h1>
+  <p>台湾市場向けのブランド展開、物流、通路構築に特化した現地パートナーです。</p>
+  <p><a href="index.html">繁體中文版はこちら</a></p>
+</body>
+</html>
