--- a/index_en.html
+++ b/index_en.html
@@ -1,13 +1,75 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LIAN YA CHENG LTD. - English</title>
+  <title>LIAN YA CHENG LTD. - Official Website</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>LIAN YA CHENG LTD.</h1>
-  <p>We specialize in brand localization, multi-channel distribution, logistics and marketing support in Taiwan.</p>
-  <p>Please return to <a href="index.html">Traditional Chinese version</a>.</p>
+  <header>
+    <img src="L.png" alt="Company Logo" class="logo" />
+    <h1>LIAN YA CHENG LTD.</h1>
+    <p>Expert in Taiwan Entry & Brand Localization</p>
+    <div class="lang-switch">
+      <a href="index.html">繁體中文</a>|
+      <a href="index_en.html">English</a>|
+      <a href="index_jp.html">日本語</a>
+    </div>
+  </header>
+
+  <section class="intro-banner">
+    <h2>We are a results-driven company specializing in brand localization and strategic market entry in Taiwan.</h2>
+    <p>With deep experience in international trade, Taiwan regulations, logistics and digital platforms, we help brands enter Taiwan efficiently and build lasting trust with consumers.</p>
+  </section>
+
+  <nav>
+    <a href="#about">About</a>
+    <a href="#features">Strengths</a>
+    <a href="#partners">Partners</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <section id="about">
+    <!-- About us content here -->
+  </section>
+
+  <section id="features">
+    <!-- Features here -->
+  </section>
+
+  <section id="partners">
+    <h2>Our Partners</h2>
+    <p>We work with brands across Asia and Europe.</p>
+    <div class="client-logos">
+      <img src="brand1.png" alt="Brand 1">
+      <img src="brand2.png" alt="Brand 2">
+      <img src="brand3.png" alt="Brand 3">
+      <img src="brand4.png" alt="Brand 4">
+    </div>
+  </section>
+
+  <section id="platforms">
+    <h2>Our Retail Network</h2>
+    <p>We cover 95%+ of Taiwanese online/offline sales channels:</p>
+    <div class="platform-logos">
+      <a href="https://shopee.tw" target="_blank"><img src="shopee.png" alt="Shopee"></a>
+      <a href="https://momo.com.tw" target="_blank"><img src="momo.png" alt="MOMO"></a>
+      <a href="https://www.pchome.com.tw" target="_blank"><img src="pchome.png" alt="PChome"></a>
+      <a href="https://www.books.com.tw" target="_blank"><img src="books.png" alt="Books.com.tw"></a>
+      <a href="https://www.coupang.com" target="_blank"><img src="coupang.png" alt="Coupang"></a>
+    </div>
+  </section>
+
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <p>Email: info@yourcompany.com</p>
+    <p>LINE official: @yourlineid</p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 LIAN YA CHENG LTD. All rights reserved.</p>
+  </footer>
 </body>
 </html>
