--- a/index_jp.html
+++ b/index_jp.html
@@ -1,13 +1,75 @@
+
 <!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LIAN YA CHENG LTD. - 日本語</title>
+  <title>LIAN YA CHENG LTD. - 公式サイト</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>LIAN YA CHENG LTD.</h1>
-  <p>台湾市場向けのブランド展開、物流、通路構築に特化した現地パートナーです。</p>
-  <p><a href="index.html">繁體中文版はこちら</a></p>
+  <header>
+    <img src="L.png" alt="会社ロゴ" class="logo" />
+    <h1>LIAN YA CHENG LTD.</h1>
+    <p>台湾市場進出・現地戦略の専門パートナー</p>
+    <div class="lang-switch">
+      <a href="index.html">繁體中文</a>|
+      <a href="index_en.html">English</a>|
+      <a href="index_jp.html">日本語</a>
+    </div>
+  </header>
+
+  <section class="intro-banner">
+    <h2>ブランドの台湾展開と現地最適化に特化した企業です</h2>
+    <p>国際貿易、台湾法規、物流、ECマーケットに精通した私たちは、ブランドの台湾市場進出をスムーズかつ信頼性高く支援します。</p>
+  </section>
+
+  <nav>
+    <a href="#about">会社概要</a>
+    <a href="#features">強み</a>
+    <a href="#partners">パートナー</a>
+    <a href="#contact">お問い合わせ</a>
+  </nav>
+
+  <section id="about">
+    <!-- 会社概要などの内容 -->
+  </section>
+
+  <section id="features">
+    <!-- 強みなどの内容 -->
+  </section>
+
+  <section id="partners">
+    <h2>取引ブランド</h2>
+    <p>アジア・ヨーロッパの複数ブランドと連携しています。</p>
+    <div class="client-logos">
+      <img src="brand1.png" alt="ブランド1">
+      <img src="brand2.png" alt="ブランド2">
+      <img src="brand3.png" alt="ブランド3">
+      <img src="brand4.png" alt="ブランド4">
+    </div>
+  </section>
+
+  <section id="platforms">
+    <h2>対応チャネル</h2>
+    <p>台湾主要のオンライン・オフライン通路を網羅しています（95%以上の消費者接点）：</p>
+    <div class="platform-logos">
+      <a href="https://shopee.tw" target="_blank"><img src="shopee.png" alt="Shopee"></a>
+      <a href="https://momo.com.tw" target="_blank"><img src="momo.png" alt="MOMO"></a>
+      <a href="https://www.pchome.com.tw" target="_blank"><img src="pchome.png" alt="PChome"></a>
+      <a href="https://www.books.com.tw" target="_blank"><img src="books.png" alt="Books.com.tw"></a>
+      <a href="https://www.coupang.com" target="_blank"><img src="coupang.png" alt="Coupang"></a>
+    </div>
+  </section>
+
+  <section id="contact">
+    <h2>お問い合わせ</h2>
+    <p>Email: info@yourcompany.com</p>
+    <p>LINE公式: @yourlineid</p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 LIAN YA CHENG LTD. All rights reserved.</p>
+  </footer>
 </body>
 </html>
