--- a/index.html
+++ b/index.html
@@ -1,112 +1,75 @@
+
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>公司官網 - 聯雅成國際企業有限公司</title>
-  <style>
-    body { font-family: sans-serif; margin: 0; line-height: 1.6; }
-    header { background: #222; color: #fff; padding: 60px 20px; text-align: center; }
-    header h1 { font-size: 2.5em; margin-bottom: 10px; }
-    header img.logo { max-width: 120px; margin-bottom: 20px; }
-    .lang-switch { margin-top: 10px; }
-    .lang-switch a { color: #ccc; margin: 0 10px; font-size: 0.9em; text-decoration: none; }
-    nav { background: #444; color: white; display: flex; justify-content: center; gap: 20px; padding: 10px 0; }
-    nav a { color: white; text-decoration: none; }
-    section { padding: 60px 20px; max-width: 1000px; margin: auto; }
-    .features { display: flex; flex-wrap: wrap; gap: 20px; }
-    .feature { flex: 1 1 300px; background: #f5f5f5; padding: 20px; border-radius: 8px; }
-    .platform-logos {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      justify-content: center;
-      align-items: center;
-      margin-top: 20px;
-    }
-    .platform-logos img {
-      max-height: 50px;
-      max-width: 120px;
-      object-fit: contain;
-      transition: transform 0.2s;
-    }
-    .platform-logos img:hover {
-      transform: scale(1.05);
-    }
-    .client-logos {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 30px;
-      margin-top: 40px;
-    }
-    .client-logos img {
-      max-height: 60px;
-      max-width: 140px;
-      object-fit: contain;
-      transition: opacity 0.2s;
-    }
-    .client-logos img:hover {
-      opacity: 0.8;
-    }
-    footer { background: #222; color: white; text-align: center; padding: 20px; }
-    @media(max-width: 600px) {
-      header h1 { font-size: 1.8em; }
-      nav { flex-direction: column; }
-    }
-  </style>
+  <title>LIAN YA CHENG LTD. - Official Website</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <img src="L.png" alt="公司Logo" class="logo" />
-    <h1>聯雅成國際企業有限公司</h1>
-    <p>LIAN YA CHENG LTD.</p>
+    <img src="L.png" alt="Company Logo" class="logo" />
+    <h1>LIAN YA CHENG LTD.</h1>
+    <p>Expert in Taiwan Entry & Brand Localization</p>
     <div class="lang-switch">
       <a href="index.html">繁體中文</a>|
       <a href="index_en.html">English</a>|
       <a href="index_jp.html">日本語</a>
     </div>
   </header>
+
+  <section class="intro-banner">
+    <h2>We are a results-driven company specializing in brand localization and strategic market entry in Taiwan.</h2>
+    <p>With deep experience in international trade, Taiwan regulations, logistics and digital platforms, we help brands enter Taiwan efficiently and build lasting trust with consumers.</p>
+  </section>
+
   <nav>
-    <a href="#about">關於我們</a>
-    <a href="#features">我們的優勢</a>
-    <a href="#partners">合作品牌</a>
-    <a href="#contact">聯絡我們</a>
+    <a href="#about">About</a>
+    <a href="#features">Strengths</a>
+    <a href="#partners">Partners</a>
+    <a href="#contact">Contact</a>
   </nav>
+
   <section id="about">
-    <!-- 原本內容略 -->
+    <!-- About us content here -->
   </section>
+
   <section id="features">
-    <!-- 原本內容略 -->
+    <!-- Features here -->
   </section>
+
   <section id="partners">
-    <h2>合作品牌</h2>
-    <p>目前合作品牌遍及亞洲與歐洲，歡迎洽詢合作。</p>
+    <h2>Our Partners</h2>
+    <p>We work with brands across Asia and Europe.</p>
     <div class="client-logos">
-      <img src="brand1.png" alt="品牌1">
-      <img src="brand2.png" alt="品牌2">
-      <img src="brand3.png" alt="品牌3">
-      <img src="brand4.png" alt="品牌4">
+      <img src="brand1.png" alt="Brand 1">
+      <img src="brand2.png" alt="Brand 2">
+      <img src="brand3.png" alt="Brand 3">
+      <img src="brand4.png" alt="Brand 4">
     </div>
   </section>
+
   <section id="platforms">
-    <h2>合作平台與通路網絡</h2>
-    <p>我們的合作平台橫跨全台主流線上購物與零售通路，涵蓋 95% 以上的消費者流量來源：</p>
+    <h2>Our Retail Network</h2>
+    <p>We cover 95%+ of Taiwanese online/offline sales channels:</p>
     <div class="platform-logos">
       <a href="https://shopee.tw" target="_blank"><img src="shopee.png" alt="Shopee"></a>
-      <a href="https://momo.com.tw" target="_blank"><img src="momo.png" alt="MOMO購物網"></a>
+      <a href="https://momo.com.tw" target="_blank"><img src="momo.png" alt="MOMO"></a>
       <a href="https://www.pchome.com.tw" target="_blank"><img src="pchome.png" alt="PChome"></a>
-      <a href="https://www.books.com.tw" target="_blank"><img src="books.png" alt="博客來"></a>
+      <a href="https://www.books.com.tw" target="_blank"><img src="books.png" alt="Books.com.tw"></a>
       <a href="https://www.coupang.com" target="_blank"><img src="coupang.png" alt="Coupang"></a>
     </div>
   </section>
+
   <section id="contact">
-    <h2>聯絡我們</h2>
+    <h2>Contact Us</h2>
     <p>Email: info@yourcompany.com</p>
-    <p>LINE官方帳號：@yourlineid</p>
+    <p>LINE official: @yourlineid</p>
   </section>
+
   <footer>
-    <p>&copy; 2025 聯雅成國際企業有限公司 | LIAN YA CHENG LTD. | All rights reserved.</p>
+    <p>&copy; 2025 LIAN YA CHENG LTD. All rights reserved.</p>
   </footer>
 </body>
 </html>
