--- a/index_jp.html
+++ b/index_jp.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LIAN YA CHENG LTD. - 公式サイト</title>
+  <title>LIAN YA CHENG LTD. - Official Website</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <img src="L.png" alt="会社ロゴ" class="logo" />
+    <img src="L.png" alt="Company Logo" class="logo" />
     <h1>LIAN YA CHENG LTD.</h1>
-    <p>台湾市場進出・現地戦略の専門パートナー</p>
+    <p>Expert in Taiwan Entry & Brand Localization</p>
     <div class="lang-switch">
       <a href="index.html">繁體中文</a>|
       <a href="index_en.html">English</a>|
@@ -20,39 +20,39 @@
   </header>
 
   <section class="intro-banner">
-    <h2>ブランドの台湾展開と現地最適化に特化した企業です</h2>
-    <p>国際貿易、台湾法規、物流、ECマーケットに精通した私たちは、ブランドの台湾市場進出をスムーズかつ信頼性高く支援します。</p>
+    <h2>We are a results-driven company specializing in brand localization and strategic market entry in Taiwan.</h2>
+    <p>With deep experience in international trade, Taiwan regulations, logistics and digital platforms, we help brands enter Taiwan efficiently and build lasting trust with consumers.</p>
   </section>
 
   <nav>
-    <a href="#about">会社概要</a>
-    <a href="#features">強み</a>
-    <a href="#partners">パートナー</a>
-    <a href="#contact">お問い合わせ</a>
+    <a href="#about">About</a>
+    <a href="#features">Strengths</a>
+    <a href="#partners">Partners</a>
+    <a href="#contact">Contact</a>
   </nav>
 
   <section id="about">
-    <!-- 会社概要などの内容 -->
+    <!-- About us content here -->
   </section>
 
   <section id="features">
-    <!-- 強みなどの内容 -->
+    <!-- Features here -->
   </section>
 
   <section id="partners">
-    <h2>取引ブランド</h2>
-    <p>アジア・ヨーロッパの複数ブランドと連携しています。</p>
+    <h2>Our Partners</h2>
+    <p>We work with brands across Asia and Europe.</p>
     <div class="client-logos">
-      <img src="brand1.png" alt="ブランド1">
-      <img src="brand2.png" alt="ブランド2">
-      <img src="brand3.png" alt="ブランド3">
-      <img src="brand4.png" alt="ブランド4">
+      <img src="brand1.png" alt="Brand 1">
+      <img src="brand2.png" alt="Brand 2">
+      <img src="brand3.png" alt="Brand 3">
+      <img src="brand4.png" alt="Brand 4">
     </div>
   </section>
 
   <section id="platforms">
-    <h2>対応チャネル</h2>
-    <p>台湾主要のオンライン・オフライン通路を網羅しています（95%以上の消費者接点）：</p>
+    <h2>Our Retail Network</h2>
+    <p>We cover 95%+ of Taiwanese online/offline sales channels:</p>
     <div class="platform-logos">
       <a href="https://shopee.tw" target="_blank"><img src="shopee.png" alt="Shopee"></a>
       <a href="https://momo.com.tw" target="_blank"><img src="momo.png" alt="MOMO"></a>
@@ -63,9 +63,9 @@
   </section>
 
   <section id="contact">
-    <h2>お問い合わせ</h2>
+    <h2>Contact Us</h2>
     <p>Email: info@yourcompany.com</p>
-    <p>LINE公式: @yourlineid</p>
+    <p>LINE official: @yourlineid</p>
   </section>
 
   <footer>
