--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
   </section>
 
   <section id="partners">
-    <h2>Our Partners</h2>
-    <p>We work with brands across Asia and Europe.</p>
+    <h2>合作品牌</h2>
+    <p>我們合作品牌遍佈亞洲與歐洲。</p>
     <div class="client-logos">
       <img src="brand1.png" alt="Brand 1">
       <img src="brand2.png" alt="Brand 2">
@@ -63,7 +63,7 @@
   </section>
 
   <section id="contact">
-    <h2>Contact Us</h2>
+    <h2>聯絡我們</h2>
     <p>Email: info@yourcompany.com</p>
     <p>LINE official: @yourlineid</p>
   </section>
