--- a/index_jp.html
+++ b/index_jp.html
@@ -40,7 +40,7 @@
   </section>
 
   <section id="partners">
-    <h2>Our Partners</h2>
+    <h2>提携ブランド</h2>
     <p>We work with brands across Asia and Europe.</p>
     <div class="client-logos">
       <img src="brand1.png" alt="Brand 1">
@@ -63,7 +63,7 @@
   </section>
 
   <section id="contact">
-    <h2>Contact Us</h2>
+    <h2>お問い合わせ</h2>
     <p>Email: info@yourcompany.com</p>
     <p>LINE official: @yourlineid</p>
   </section>
